Copy to clipboard added

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Deepak Singh" />
     <meta
       name="description"
-      content="This website enables you to convert your text cases, removing extra spaces from text and other useful text utilities functions."
+      content="This website enables you to convert your text cases, removing extra spaces from text and other useful text utilities functions like converting text from uppercase to lowercase or lowercase to uppercase ."
     />
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 <!-- <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png"> -->
